# PAX_SAPIENTICA

./: .editorconfig  .gitignore  .gitmodules  3DModel_8hpp.html  3DModel_8hpp.js  3DModel_8hpp__dep__incl.map  3DModel_8hpp__dep__incl.md5  3DModel_8hpp__incl.map  3DModel_8hpp__incl.md5  3DModel_8hpp_source.html  AStar_8hpp.html  AStar_8hpp.js  AStar_8hpp__dep__incl.map  AStar_8hpp__dep__incl.md5  AStar_8hpp__incl.map  AStar_8hpp__incl.md5  AStar_8hpp_source.html  Agent_8hpp.html  Agent_8hpp.js  Agent_8hpp__dep__incl.map  Agent_8hpp__dep__incl.md5  Agent_8hpp__incl.map  Agent_8hpp__incl.md5  Agent_8hpp_source.html  AppComponentManager_8hpp.html  AppComponentManager_8hpp.js  AppComponentManager_8hpp__dep__incl.map  AppComponentManager_8hpp__dep__incl.md5  AppComponentManager_8hpp__incl.map  AppComponentManager_8hpp__incl.md5  AppComponentManager_8hpp_source.html  AppConfig_8hpp.html  AppConfig_8hpp.js  AppConfig_8hpp__dep__incl.map  AppConfig_8hpp__dep__incl.md5  AppConfig_8hpp__incl.map  AppConfig_8hpp__incl.md5  AppConfig_8hpp_source.html  AppConst_8hpp.html  AppConst_8hpp.js  (+4274 more)
Data/: README.md  (+1 more)
Project/: CMakeLists.txt
Project/Android/: README.md
Project/Android/app/: build.gradle.kts
Project/CuiSimulationTest/: CMakeLists.txt
Project/CuiSimulationTest/UnitTest/: AgentTest.cpp  CMakeLists.txt  SFMLTest.cpp
Project/CuiSimulationTest/UnitTest/include/: AgentSimulator.hpp
Project/Distance/Windows/: Distance.sln
Project/ElevationCSVtoTSV/: ElevationCSVtoTSV.sln
Project/ElevationCSVtoTSV/ElevationCSVtoTSV/: ElevationCSVtoTSV.vcxproj  main.cpp
Project/GeographicDataToSimulationGrid/: CMakeLists.txt  Helper.hpp  ImageScaler.hpp  Main.cpp
Project/GeographicDataToSimulationGrid/Settings/: AreaCalculate.txt  ColorCount.txt  ImageCombine.txt  ImageSegment.txt  LandAndSea.txt  LandAndWaterConvert.txt  RiversAndLakesConvert.txt  SoilTemperatureConvert.txt  test.tsv  test2.tsv
Project/GeographicDataToSimulationGrid/include/: AreaCalculater.hpp  ColorCounter.hpp  Helper.hpp  ImageCombiner.hpp  ImageResizer.hpp  ImageScaler.hpp  ImageSegmenter.hpp  LandAndWaterConverter.hpp
Project/ImageToData/: ImageToData.sln
Project/ImageToData/ImageToData/: ImageToData.vcxproj  ImageToData.vcxproj.filters  main.cpp  main2.cpp  main4.cpp
Project/IncludeTest/: CMakeLists.txt
Project/IncludeTest/source/: FileIncludeTest.cpp  LoggerIncludeTest.cpp  MathIncludeTest.cpp  StringExtensionsIncludeTest.cpp  TouchManagerIncludeTest.cpp
Project/IntegrationTest/: CMakeLists.txt
Project/IntegrationTest/source/: SettlementSimulatorTest.cpp  WindowTest.cpp
Project/LibraryTest/: CMakeLists.txt
Project/LibraryTest/UnitTest/: CMakeLists.txt
Project/Mac/GeographicDataToSimulationGrid/: .gitignore  CMakeLists.txt  Main.cpp
Project/MapViewer/: CMakeLists.txt
Project/MapViewer/Windows/: GraphicalUserInterface.sln
Project/MicrosoftVisualStudio/: MicrosoftVisualStudio.sln
Project/MicrosoftVisualStudio/Distance/: Distance.vcxproj  main.cpp
Project/MicrosoftVisualStudio/ElevationCSVtoTSV/: ElevationCSVtoTSV.vcxproj  main.cpp
Project/MicrosoftVisualStudio/ImageToData/: color.tsv  main.cpp  main2.cpp  main3.cpp  main4.cpp
Project/MicrosoftVisualStudio/KanaAndRomajiConversion/: main.cpp  output.txt
Project/MicrosoftVisualStudio/MicrosoftVisualStudio/: MicrosoftVisualStudio.vcxproj.filters
Project/MicrosoftVisualStudio/XYZTilesTSVtoBinary/: main.cpp
Project/SimulationTest/: CMakeLists.txt
Project/SimulationTest/UnitTest/: CMakeLists.txt
Project/UnitTest/: CMakeLists.txt
Project/UnitTest/source/: ConvertToInt.cpp  FileUnitTest.cpp  GraphicVisualizationListUnitTest.cpp  HttpClientUnitTest.cpp  LoggerUnitTest.cpp  MapProjectionUnitTest.cpp  MathUnitTest.cpp  MurMur3UnitTest.cpp  RandomSelectorUnitTest.cpp  StringExtensionsUnitTest.cpp  TouchManagerUnitTest.cpp
Projects/: CMakeLists.txt  README.md  vcpkg.json
Projects/Android/: build.gradle.kts
Projects/GeographicDataToSimulationGrid/: CMakeLists.txt  Main.cpp  README.md
Projects/GeographicDataToSimulationGrid/Settings/: ColorCount.txt  ImageResize.txt  ImageSegment.txt
Projects/GeographicDataToSimulationGrid/include/: ColorCounter.hpp  Helper.hpp  ImageCombiner.hpp  ImageResizer.hpp  ImageScaler.hpp  LandAndWaterConverter.hpp  RiversAndLakesConverter.hpp  SoilTemperatureConverter.hpp
Projects/IncludeTest/: CMakeLists.txt
Projects/IntegrationTest/: AppStateManagerTest.cpp  CMakeLists.txt
Projects/IntegrationTest/Source/: EnvironmentTest.cpp  SFMLTest.cpp  SettlementSimulatorTest.cpp  SimulatorTest.cpp  WindowTest.cpp
Projects/IntegrationTest/source/: EnvironmentTest.cpp  SettlementSimulatorTest.cpp  SimulatorTest.cpp  WindowTest.cpp
Projects/MapViewer/: CMakeLists.txt
Projects/MapViewer/CMake/: Path.tsv
Projects/MapViewer/Linux/: Config.tsv
Projects/MapViewer/Ubuntu/: Config.tsv  README.md
Projects/MapViewer/Windows/: Config.tsv  GraphicalUserInterface.sln  README.md
Projects/MapViewer/macOS/: DMGSetup.scpt  Info.plist.in  ProdConfig.tsv  appicon.icns
Projects/MicrosoftVisualStudio/: MicrosoftVisualStudio.sln
Projects/MicrosoftVisualStudio/ElevationCSVtoTSV/: ElevationCSVtoTSV.vcxproj  main.cpp
Projects/MicrosoftVisualStudio/ImageToData/: ImageToData.vcxproj  ImageToData.vcxproj.filters  main20250303.cpp  main20250303_20250904.cpp  main_combine.cpp  main_combine_20250904.cpp  main_ryoseikoku.cpp  main_segment.cpp  soil.tsv
Projects/MicrosoftVisualStudio/KanaAndRomajiConversion/: KanaAndRomajiConversion.vcxproj  input.txt  main.cpp
Projects/MicrosoftVisualStudio/MicrosoftVisualStudio/: MicrosoftVisualStudio.vcxproj
Projects/MicrosoftVisualStudio/XYZTilesTSVtoBinary/: XYZTilesTSVtoBinary.vcxproj  main.cpp
Projects/UnitTest/: CMakeLists.txt
Projects/UnitTest/Source/: ConvertToInt.cpp  LoggerUnitTest.cpp  RandomSelectorUnitTest.cpp  StringExtensionsUnitTest.cpp
Projects/UnitTest/source/: FileUnitTest.cpp
Projects/cmake/: FindDxLib.cmake  FindSFMLCustom.cmake  FindSiv3D.cmake  GraphicsLibraryHelpers.cmake  README.md  ReadVersion.cmake  arm64-osx-static.cmake  x64-osx-static.cmake
(+10308 files in other folders)
