cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 20)
set(EXECUTABLE_OUTPUT_PATH ../../Project/GeographicDataToSimulationGrid/bin)
include_directories(../../Library)
include_directories(include)

find_package(OpenCV QUIET)

function(add_project_executable target)
    if(OpenCV_FOUND)
        add_executable(${target} Main.cpp)
        target_compile_definitions(${target} PRIVATE ${target})
        target_link_libraries(${target} ${OpenCV_LIBS})
    endif()
endfunction()

if(OpenCV_FOUND)
    include_directories(${OpenCV_INCLUDE_DIRS})
    add_project_executable(AreaCalculate)
    add_project_executable(ColorCount)
    add_project_executable(CreateSampleImages)
    add_project_executable(SoilTemperatureConvert)
    add_project_executable(ImageCombine)
    add_project_executable(ImageResize)
    add_project_executable(ImageSegment)
    add_project_executable(LandAndSea)
    add_project_executable(LandAndWaterConvert)
    add_project_executable(RiversAndLakesConvert)
endif()
